 * Gameplay fix: Hammer damage is now rounded down. This means it will cause NO DAMAGE to a hedgehog with less than 3 hp.
 * Fixed screenshots being too bright if taken in quick succession
 * Video recording functionality is restored
 * Fixed bee not being affected by wrap world edge while still being thrown
 * Fixed turn not ending when sticky mine was trapped on rubberband
 * Fixed hedgehog-voices missing a response type (Justyouwait/"You're gonna pay for that") on some platforms (e.g. Linux)
 * Fixed SD-flakes of themes not working if regular flakes were disabled
 * Fixed RC planes being able to collect frozen crates
 * Fixed Seduction's "Yoohoo!" sound not playing
 * Fixed Hedgehogs getting hurt while firing deagle / sniper rifle bullet in certains situations
 * Fixed hedgehogs saying “Missed” when drowning enemy without dealing damage
 * Fixed enemy saying "Missed” when giving poison without direct damage
 * Fixed hedgehogs not saying “Stupid” and not displaying announcer message for inflicting self-harm
 * Fixed incorrect time box tooltip when in Sudden Death
 * Various other fixes

Highlander:
 + Show collected weapons after kill and play sound
 + Mission panel now shows all game modifiers (e.g. mines time, vampirism, etc.)

Construction Mode:
 + Added script parameter support:
  + initialenergy: Amount of energy at start
  + energyperround: New energy per round
  + maxenergy: Maximum allowed energy
  + cratesperround: Maximum placable crates per round
 + Completely reworked all in-game texts and descriptions
 * Fix rubber being placable inside land
 * Fix invalid girder placement costing energy
 * Special tools like structure placer now have their own proper descriptions (instead of Air Attack description, etc.)
 * Costs for weapon and utility crates were all equal
 * Many other fixes and tweaks

Racer and TechRacer:
 + Allow to only place 2 waypoints in Racer
 + Allow to remove Racer waypoints with precise key
 + New script parameters for Racer: